# siad_tpe

./: .gitignore  README.md  pyproject.toml
src/tp_siad/: main.py  mainTests.py
src/tp_siad/QC_Optimizer/: fastroute_problem.py  frp_rand_solver.py  problem.py  route_solution.py  solution.py  solver.py
